--- a/nlp_task.ipynb
+++ b/nlp_task.ipynb
@@ -109,16 +109,36 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.preprocessing import label_binarize\n",
+    "\n",
     "vectorizer.fit(all_data)\n",
     "x_train = pd.DataFrame(vectorizer.transform(train_data).toarray(), columns=sorted(vectorizer.vocabulary_.keys()))\n",
     "y_train_raw = pd.read_json(\"./train/labels.json\")\n",
-    "y_train = list([1 if x == \"Тартак\" else 0 for x in y_train_raw.values[0]])\n",
+    "\n",
+    "y_train = label_binarize(y_train_raw.values[0], classes=[\"Тартак\", \"Океан Ельзи\"]).ravel()\n",
+    "\n",
+    "print(y_train)\n",
+    "# y_train = list([1 if x == \"Тартак\" else 0 for x in y_train_raw.values[0]])\n",
     "\n",
     "x_test = pd.DataFrame(vectorizer.transform(test_data).toarray(), columns=sorted(vectorizer.vocabulary_.keys()))\n",
     "y_test_raw = pd.read_json(\"./test/labels.json\")\n",
-    "y_test = list([1 if x == \"Тартак\" else 0 for x in y_test_raw.values[0]])"
+    "y_test = label_binarize(y_test_raw.values[0], classes=[\"Тартак\", \"Океан Ельзи\"]).ravel()\n",
+    "\n",
+    "# y_test = list([1 if x == \"Тартак\" else 0 for x in y_test_raw.values[0]])"
    ]
   },
   {
@@ -134,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import roc_curve, auc\n",
+    "from sklearn.metrics import roc_curve, auc, roc_auc_score\n",
     "\n",
     "\n",
     "def compute_roc_auc(y_test, y_pred):    \n",
@@ -159,7 +179,7 @@
       " 0.9047619047619048 \n",
       "\n",
       "AUC (Area Under Curve): \n",
-      " 0.9047619047619048 \n",
+      " 0.9 \n",
       "\n"
      ]
     }
@@ -174,7 +194,7 @@
     "\n",
     "# Evaluate\n",
     "print(\"Accuracy: \\n {} \\n\".format(compute_accuraccy(y_test, y_pred)))\n",
-    "print(\"AUC (Area Under Curve): \\n {} \\n\".format(compute_accuraccy(y_test, y_pred)))"
+    "print(\"AUC (Area Under Curve): \\n {} \\n\".format(compute_roc_auc(y_test, y_pred)))"
    ]
   },
   {
@@ -194,10 +214,10 @@
      "output_type": "stream",
      "text": [
       "Accuracy: \n",
-      " 0.8095238095238095 \n",
+      " 0.7857142857142857 \n",
       "\n",
       "AUC (Area Under Curve): \n",
-      " 0.8095238095238095 \n",
+      " 0.7857142857142857 \n",
       "\n"
      ]
     }
@@ -212,10 +232,7 @@
     "\n",
     "# Evaluate\n",
     "print(\"Accuracy: \\n {} \\n\".format(compute_accuraccy(y_test, y_pred)))\n",
-    "print(\"AUC (Area Under Curve): \\n {} \\n\".format(compute_accuraccy(y_test, y_pred)))\n",
-    "\n",
-    "\n",
-    "# from sklearn.preprocessing import label_binarize\n"
+    "print(\"AUC (Area Under Curve): \\n {} \\n\".format(compute_accuraccy(y_test, y_pred)))"
    ]
   },
   {
@@ -240,6 +257,35 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "clf = LogisticRegression(random_state=0, solver='lbfgs')\n",
+    "clf.fit(x_train, y_train)\n",
+    "y_pred = clf.predict(x_test)\n",
+    "\n",
+    "print(\"Accuracy: \\n {} \\n\".format(compute_accuraccy(y_test, y_pred)))\n",
+    "print(\"AUC (Area Under Curve): \\n {} \\n\".format(compute_accuraccy(y_test, y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: \n",
+      " 0.7857142857142857 \n",
+      "\n",
+      "AUC (Area Under Curve): \n",
+      " 0.7857142857142857 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "clf = KNeighborsClassifier(n_neighbors=3)\n",
     "clf.fit(x_train, y_train)\n",
     "y_pred = clf.predict(x_test)\n",
     "\n",
